Avoid division by zero when calculation the number of moves to go in the UCI protocol with time control activated.

BUG: 446409
FIXED-IN: 21.12.1